--- a/design.ui
+++ b/design.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>521</width>
+    <width>439</width>
     <height>633</height>
    </rect>
   </property>
@@ -19,7 +19,7 @@
      <number>5</number>
     </property>
     <property name="sizeConstraint">
-     <enum>QLayout::SetMinimumSize</enum>
+     <enum>QLayout::SizeConstraint::SetMinimumSize</enum>
     </property>
     <property name="leftMargin">
      <number>5</number>
@@ -36,7 +36,7 @@
     <item>
      <widget class="QSplitter" name="main_splitter">
       <property name="orientation">
-       <enum>Qt::Horizontal</enum>
+       <enum>Qt::Orientation::Horizontal</enum>
       </property>
       <widget class="QWidget" name="control_panel_widget" native="true">
        <layout class="QVBoxLayout" name="verticalLayout">
@@ -153,13 +153,13 @@
                <number>5</number>
               </property>
               <property name="topMargin">
-               <number>5</number>
+               <number>2</number>
               </property>
               <property name="rightMargin">
                <number>5</number>
               </property>
               <property name="bottomMargin">
-               <number>5</number>
+               <number>2</number>
               </property>
               <item>
                <widget class="QPushButton" name="backward_dir_button">
@@ -167,7 +167,7 @@
                  <string>←</string>
                 </property>
                 <property name="checkable">
-                 <bool>true</bool>
+                 <bool>false</bool>
                 </property>
                </widget>
               </item>
@@ -176,11 +176,8 @@
                 <property name="text">
                  <string>→</string>
                 </property>
-                <property name="checkable">
-                 <bool>true</bool>
-                </property>
                 <property name="checked">
-                 <bool>true</bool>
+                 <bool>false</bool>
                 </property>
                </widget>
               </item>
@@ -193,13 +190,19 @@
               <string>Общий диапазон</string>
              </property>
              <layout class="QGridLayout" name="gridLayout_6">
+              <property name="topMargin">
+               <number>4</number>
+              </property>
+              <property name="bottomMargin">
+               <number>4</number>
+              </property>
               <property name="spacing">
                <number>2</number>
               </property>
               <item row="1" column="0">
                <widget class="QLabel" name="limit_left_label">
                 <property name="layoutDirection">
-                 <enum>Qt::LeftToRight</enum>
+                 <enum>Qt::LayoutDirection::LeftToRight</enum>
                 </property>
                 <property name="text">
                  <string>Предел слева:</string>
@@ -242,7 +245,7 @@
                  <double>20.000000000000000</double>
                 </property>
                 <property name="value">
-                 <double>1.000000000000000</double>
+                 <double>-1.000000000000000</double>
                 </property>
                </widget>
               </item>
@@ -343,7 +346,7 @@
                  <double>20.000000000000000</double>
                 </property>
                 <property name="value">
-                 <double>1.000000000000000</double>
+                 <double>-1.000000000000000</double>
                 </property>
                </widget>
               </item>
@@ -404,8 +407,11 @@
              <property name="text">
               <string>Направление при старте:</string>
              </property>
+             <property name="wordWrap">
+              <bool>false</bool>
+             </property>
              <property name="margin">
-              <number>11</number>
+              <number>5</number>
              </property>
             </widget>
            </item>
@@ -425,7 +431,7 @@
                <number>5</number>
               </property>
               <property name="bottomMargin">
-               <number>5</number>
+               <number>2</number>
               </property>
               <property name="horizontalSpacing">
                <number>5</number>
@@ -530,12 +536,6 @@
               <iconset>
                <normaloff>resources/play.png</normaloff>resources/play.png</iconset>
              </property>
-             <property name="iconSize">
-              <size>
-               <width>30</width>
-               <height>30</height>
-              </size>
-             </property>
              <property name="checkable">
               <bool>false</bool>
              </property>
@@ -550,12 +550,6 @@
               <iconset>
                <normaloff>resources/reset.png</normaloff>resources/reset.png</iconset>
              </property>
-             <property name="iconSize">
-              <size>
-               <width>30</width>
-               <height>30</height>
-              </size>
-             </property>
             </widget>
            </item>
            <item>
@@ -567,12 +561,6 @@
               <iconset>
                <normaloff>resources/u-turn.png</normaloff>resources/u-turn.png</iconset>
              </property>
-             <property name="iconSize">
-              <size>
-               <width>30</width>
-               <height>30</height>
-              </size>
-             </property>
             </widget>
            </item>
            <item>
@@ -583,12 +571,6 @@
              <property name="icon">
               <iconset>
                <normaloff>resources/next-button.png</normaloff>resources/next-button.png</iconset>
-             </property>
-             <property name="iconSize">
-              <size>
-               <width>30</width>
-               <height>30</height>
-              </size>
              </property>
              <property name="default">
               <bool>false</bool>
@@ -711,8 +693,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>521</width>
-     <height>26</height>
+     <width>439</width>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu">
