--- a/design.ui
+++ b/design.ui
@@ -6,20 +6,32 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>439</width>
-    <height>633</height>
+    <width>527</width>
+    <height>578</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <property name="spacing">
      <number>5</number>
     </property>
     <property name="sizeConstraint">
-     <enum>QLayout::SizeConstraint::SetMinimumSize</enum>
+     <enum>QLayout::SetMinimumSize</enum>
     </property>
     <property name="leftMargin">
      <number>5</number>
@@ -35,9 +47,6 @@
     </property>
     <item>
      <widget class="QSplitter" name="main_splitter">
-      <property name="orientation">
-       <enum>Qt::Orientation::Horizontal</enum>
-      </property>
       <widget class="QWidget" name="control_panel_widget" native="true">
        <layout class="QVBoxLayout" name="verticalLayout">
         <property name="spacing">
@@ -57,6 +66,12 @@
         </property>
         <item>
          <widget class="QFrame" name="sample_frame">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <layout class="QGridLayout" name="gridLayout_3">
            <property name="leftMargin">
             <number>5</number>
@@ -163,18 +178,21 @@
               </property>
               <item>
                <widget class="QPushButton" name="backward_dir_button">
-                <property name="text">
-                 <string>←</string>
-                </property>
-                <property name="checkable">
-                 <bool>false</bool>
+                <property name="iconSize">
+                 <size>
+                  <width>30</width>
+                  <height>20</height>
+                 </size>
                 </property>
                </widget>
               </item>
               <item>
                <widget class="QPushButton" name="forward_dir_button">
-                <property name="text">
-                 <string>→</string>
+                <property name="iconSize">
+                 <size>
+                  <width>30</width>
+                  <height>20</height>
+                 </size>
                 </property>
                 <property name="checked">
                  <bool>false</bool>
@@ -199,57 +217,24 @@
               <property name="spacing">
                <number>2</number>
               </property>
-              <item row="1" column="0">
-               <widget class="QLabel" name="limit_left_label">
-                <property name="layoutDirection">
-                 <enum>Qt::LayoutDirection::LeftToRight</enum>
-                </property>
-                <property name="text">
-                 <string>Предел слева:</string>
-                </property>
-               </widget>
-              </item>
-              <item row="2" column="0">
-               <widget class="QLabel" name="limit_right_label">
-                <property name="text">
-                 <string>Предел справа:</string>
-                </property>
-               </widget>
-              </item>
-              <item row="2" column="1">
-               <widget class="QDoubleSpinBox" name="limit_right_spin">
-                <property name="minimum">
-                 <double>-20.000000000000000</double>
-                </property>
+              <item row="3" column="1">
+               <widget class="QDoubleSpinBox" name="delay_spin">
                 <property name="maximum">
-                 <double>20.000000000000000</double>
+                 <double>30.000000000000000</double>
                 </property>
-                <property name="value">
-                 <double>1.000000000000000</double>
+                <property name="singleStep">
+                 <double>0.100000000000000</double>
                 </property>
                </widget>
               </item>
               <item row="3" column="0">
-               <widget class="QLabel" name="step_label">
+               <widget class="QLabel" name="delay_label">
                 <property name="text">
-                 <string>Шаг:</string>
+                 <string>Задержка:</string>
                 </property>
                </widget>
               </item>
-              <item row="1" column="1">
-               <widget class="QDoubleSpinBox" name="limit_left_spin">
-                <property name="minimum">
-                 <double>-20.000000000000000</double>
-                </property>
-                <property name="maximum">
-                 <double>20.000000000000000</double>
-                </property>
-                <property name="value">
-                 <double>-1.000000000000000</double>
-                </property>
-               </widget>
-              </item>
-              <item row="3" column="1">
+              <item row="2" column="1">
                <widget class="QDoubleSpinBox" name="step_spin">
                 <property name="decimals">
                  <number>3</number>
@@ -268,32 +253,61 @@
                 </property>
                </widget>
               </item>
-              <item row="4" column="0">
-               <widget class="QLabel" name="delay_label">
+              <item row="1" column="0">
+               <widget class="QLabel" name="limit_right_label">
                 <property name="text">
-                 <string>Задержка:</string>
-                </property>
-               </widget>
-              </item>
-              <item row="4" column="1">
-               <widget class="QDoubleSpinBox" name="delay_spin">
-                <property name="maximum">
-                 <double>30.000000000000000</double>
-                </property>
-                <property name="singleStep">
-                 <double>0.100000000000000</double>
+                 <string>Предел справа:</string>
                 </property>
                </widget>
               </item>
               <item row="0" column="0">
-               <widget class="QLabel" name="label">
+               <widget class="QLabel" name="limit_left_label">
+                <property name="layoutDirection">
+                 <enum>Qt::LeftToRight</enum>
+                </property>
                 <property name="text">
-                 <string>Исходная точка:</string>
+                 <string>Предел слева:</string>
                 </property>
                </widget>
               </item>
               <item row="0" column="1">
-               <widget class="QDoubleSpinBox" name="zero_spin"/>
+               <widget class="QDoubleSpinBox" name="limit_left_spin">
+                <property name="minimumSize">
+                 <size>
+                  <width>100</width>
+                  <height>0</height>
+                 </size>
+                </property>
+                <property name="minimum">
+                 <double>-20.000000000000000</double>
+                </property>
+                <property name="maximum">
+                 <double>20.000000000000000</double>
+                </property>
+                <property name="value">
+                 <double>-1.000000000000000</double>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="0">
+               <widget class="QLabel" name="step_label">
+                <property name="text">
+                 <string>Шаг:</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="1">
+               <widget class="QDoubleSpinBox" name="limit_right_spin">
+                <property name="minimum">
+                 <double>-20.000000000000000</double>
+                </property>
+                <property name="maximum">
+                 <double>20.000000000000000</double>
+                </property>
+                <property name="value">
+                 <double>1.000000000000000</double>
+                </property>
+               </widget>
               </item>
              </layout>
             </widget>
@@ -339,6 +353,12 @@
               </item>
               <item row="0" column="3">
                <widget class="QDoubleSpinBox" name="limit_left_accurate_spin">
+                <property name="minimumSize">
+                 <size>
+                  <width>100</width>
+                  <height>0</height>
+                 </size>
+                </property>
                 <property name="minimum">
                  <double>-20.000000000000000</double>
                 </property>
@@ -508,6 +528,12 @@
         </item>
         <item>
          <widget class="QGroupBox" name="meas_control_box">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="title">
            <string>Управление измерением:</string>
           </property>
@@ -585,6 +611,12 @@
         </item>
         <item>
          <widget class="QGroupBox" name="manual_panel_box">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="title">
            <string>Ручное управление:</string>
           </property>
@@ -693,8 +725,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>439</width>
-     <height>20</height>
+     <width>527</width>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu">
